Fixed high score box being hidden on smaller screens

--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@ h3 {
     border: 3px solid black;
 }
 
+#title {
+    overflow: scroll;
+}
+
 #play {
     position: absolute;
     text-align: center;
